--- a/goldshift-stock-API-search.ipynb
+++ b/goldshift-stock-API-search.ipynb
@@ -2,14 +2,460 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e8e4d35f-84a8-494b-b276-a602befc2440",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import urllib.parse\n",
-    "import requests"
+    "import requests\n",
+    "from alpha_vantage.timeseries import TimeSeries \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "260a20e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_key = '5DSE3C5SKVGXPHNX'\n",
+    "ts = TimeSeries(key=API_key, output_format='pandas')\n",
+    "companies = ['BVN', 'GOLD', 'NEM', 'KGC', 'HMY', 'CDE', 'GFI']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0fa4ae75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def stock_comps_API(companies, ts):\n",
+    "    merged_data = pd.DataFrame()  \n",
+    "    \n",
+    "    for ticker in companies:\n",
+    "        data, meta_data = ts.get_daily(symbol=ticker, outputsize='full')\n",
+    "        close_prices = data['4. close']\n",
+    "        close_prices.name = ticker\n",
+    "        merged_data = pd.concat([merged_data, close_prices], axis=1)\n",
+    "        \n",
+    "    merged_data.index = pd.to_datetime(merged_data.index)\n",
+    "    data_range = pd.bdate_range(start='2004-01-01', end='2024-07-01')\n",
+    "    valid_dates = data_range.intersection(merged_data.index)\n",
+    "    merged_data = merged_data.loc[valid_dates]\n",
+    "    return merged_data\n",
+    "\n",
+    "# Call the function\n",
+    "goldshift_df = stock_comps_API(companies, ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4fdd1d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BVN</th>\n",
+       "      <th>GOLD</th>\n",
+       "      <th>NEM</th>\n",
+       "      <th>KGC</th>\n",
+       "      <th>HMY</th>\n",
+       "      <th>CDE</th>\n",
+       "      <th>GFI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2004-01-02</th>\n",
+       "      <td>28.83</td>\n",
+       "      <td>22.98</td>\n",
+       "      <td>48.64</td>\n",
+       "      <td>8.08</td>\n",
+       "      <td>16.56</td>\n",
+       "      <td>5.90</td>\n",
+       "      <td>14.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-05</th>\n",
+       "      <td>29.98</td>\n",
+       "      <td>23.40</td>\n",
+       "      <td>49.75</td>\n",
+       "      <td>8.53</td>\n",
+       "      <td>17.03</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td>14.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-06</th>\n",
+       "      <td>29.55</td>\n",
+       "      <td>22.95</td>\n",
+       "      <td>48.84</td>\n",
+       "      <td>8.18</td>\n",
+       "      <td>16.88</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>14.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-07</th>\n",
+       "      <td>27.85</td>\n",
+       "      <td>22.72</td>\n",
+       "      <td>47.44</td>\n",
+       "      <td>7.87</td>\n",
+       "      <td>16.63</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>14.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-01-08</th>\n",
+       "      <td>28.00</td>\n",
+       "      <td>22.62</td>\n",
+       "      <td>47.90</td>\n",
+       "      <td>7.91</td>\n",
+       "      <td>16.77</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>14.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-25</th>\n",
+       "      <td>17.08</td>\n",
+       "      <td>16.59</td>\n",
+       "      <td>41.90</td>\n",
+       "      <td>7.62</td>\n",
+       "      <td>9.18</td>\n",
+       "      <td>5.48</td>\n",
+       "      <td>14.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-26</th>\n",
+       "      <td>16.77</td>\n",
+       "      <td>16.80</td>\n",
+       "      <td>41.45</td>\n",
+       "      <td>7.87</td>\n",
+       "      <td>9.01</td>\n",
+       "      <td>5.56</td>\n",
+       "      <td>15.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-27</th>\n",
+       "      <td>16.64</td>\n",
+       "      <td>16.84</td>\n",
+       "      <td>41.84</td>\n",
+       "      <td>8.32</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>15.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-28</th>\n",
+       "      <td>16.95</td>\n",
+       "      <td>16.68</td>\n",
+       "      <td>41.87</td>\n",
+       "      <td>8.32</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>14.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-01</th>\n",
+       "      <td>16.74</td>\n",
+       "      <td>16.56</td>\n",
+       "      <td>41.65</td>\n",
+       "      <td>8.24</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>14.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5158 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              BVN   GOLD    NEM   KGC    HMY   CDE    GFI\n",
+       "2004-01-02  28.83  22.98  48.64  8.08  16.56  5.90  14.24\n",
+       "2004-01-05  29.98  23.40  49.75  8.53  17.03  6.67  14.70\n",
+       "2004-01-06  29.55  22.95  48.84  8.18  16.88  6.66  14.50\n",
+       "2004-01-07  27.85  22.72  47.44  7.87  16.63  6.13  14.18\n",
+       "2004-01-08  28.00  22.62  47.90  7.91  16.77  6.24  14.07\n",
+       "...           ...    ...    ...   ...    ...   ...    ...\n",
+       "2024-06-25  17.08  16.59  41.90  7.62   9.18  5.48  14.93\n",
+       "2024-06-26  16.77  16.80  41.45  7.87   9.01  5.56  15.16\n",
+       "2024-06-27  16.64  16.84  41.84  8.32   9.17  5.59  15.29\n",
+       "2024-06-28  16.95  16.68  41.87  8.32   9.17  5.62  14.90\n",
+       "2024-07-01  16.74  16.56  41.65  8.24   9.17  5.40  14.86\n",
+       "\n",
+       "[5158 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goldshift_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6ce9cd0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goldshift_df.to_csv('stock_market.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "05f45542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def stock_comps_API(companies, ts):\n",
+    "    merged_data = pd.DataFrame()  \n",
+    "    \n",
+    "    for ticker in companies:\n",
+    "        data, meta_data = ts.get_daily(symbol=ticker, outputsize='full')\n",
+    "        close_prices = data['4. close']\n",
+    "        close_prices.name = ticker\n",
+    "        merged_data = pd.concat([merged_data, close_prices], axis=1)\n",
+    "        \n",
+    "    merged_data.index = pd.to_datetime(merged_data.index)\n",
+    "    data_range = pd.bdate_range(start='2004-01-01', end='2024-07-01')\n",
+    "    valid_dates = data_range.intersection(merged_data.index)\n",
+    "    merged_data = merged_data.loc[valid_dates]\n",
+    "    return merged_data\n",
+    "\n",
+    "# Call the function\n",
+    "goldshift_df = stock_comps_API(companies, ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d73a9439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Alfonso Codes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "268f1032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>BRENT</th>\n",
+       "      <th>WTI</th>\n",
+       "      <th>FEDERAL_FUNDS_RATE</th>\n",
+       "      <th>NATURAL_GAS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004-01-02</td>\n",
+       "      <td>29.55</td>\n",
+       "      <td>.</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004-01-05</td>\n",
+       "      <td>32.30</td>\n",
+       "      <td>33.71</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>6.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-01-06</td>\n",
+       "      <td>31.20</td>\n",
+       "      <td>33.54</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>7.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-01-07</td>\n",
+       "      <td>30.99</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>6.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5343</th>\n",
+       "      <td>2024-06-25</td>\n",
+       "      <td>86.81</td>\n",
+       "      <td>81.97</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>2.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5344</th>\n",
+       "      <td>2024-06-26</td>\n",
+       "      <td>85.76</td>\n",
+       "      <td>82.19</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>2.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5345</th>\n",
+       "      <td>2024-06-27</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>83.04</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>2.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5346</th>\n",
+       "      <td>2024-06-28</td>\n",
+       "      <td>87.26</td>\n",
+       "      <td>82.83</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>2.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5347</th>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>86.57</td>\n",
+       "      <td>84.7</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>2.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5348 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      timestamp  BRENT    WTI  FEDERAL_FUNDS_RATE NATURAL_GAS\n",
+       "0    2004-01-01      .      .                0.94           .\n",
+       "1    2004-01-02  29.55      .                1.01           .\n",
+       "2    2004-01-05  32.30  33.71                0.97        6.28\n",
+       "3    2004-01-06  31.20  33.54                0.92        7.04\n",
+       "4    2004-01-07  30.99  33.57                0.94        6.61\n",
+       "...         ...    ...    ...                 ...         ...\n",
+       "5343 2024-06-25  86.81  81.97                5.33        2.61\n",
+       "5344 2024-06-26  85.76  82.19                5.33        2.45\n",
+       "5345 2024-06-27   87.0  83.04                5.33        2.55\n",
+       "5346 2024-06-28  87.26  82.83                5.33        2.42\n",
+       "5347 2024-07-01  86.57   84.7                5.33        2.21\n",
+       "\n",
+       "[5348 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "business_days = pd.bdate_range(start='2004-01-01', end='2024-07-01')\n",
+    "df = pd.DataFrame({'timestamp': business_days})\n",
+    "api_key = '5DSE3C5SKVGXPHNX'\n",
+    "api_function = ['BRENT','WTI','FEDERAL_FUNDS_RATE','NATURAL_GAS']\n",
+    "for x in api_function:\n",
+    "    url = f'https://www.alphavantage.co/query?function={x}&interval=daily&apikey={api_key}&datatype=csv'\n",
+    "    df1 = pd.read_csv(url)\n",
+    "    df1 = df1.rename(columns = {'value': f'{x}'})\n",
+    "    df1['timestamp'] = pd.to_datetime(df1['timestamp'])\n",
+    "    df = pd.merge(df, df1, on='timestamp', how='left')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "23814396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(' commodities.csv', index=True)"
    ]
   }
  ],
